force-app/main/default/objects/LiveChatTranscript/fields/ChatEndUserId__c.field-meta.xml
<CustomField>
    <fullName>ChatEndUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChatEndUserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Chat_Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>