force-app/main/default/objects/LiveChatTranscript/fields/ChatStartSite__c.field-meta.xml
<CustomField>
    <fullName>ChatStartSite__c</fullName>
    <description>Populated by Chat Snippet File</description>
    <inlineHelpText>The site that the user initiated the chat from...</inlineHelpText>
    <label>ChatStartSite</label>
    <length>200</length>
    <type>Text</type>
</CustomField>