force-app/main/default/objects/LiveChatTranscript/fields/ChatStartURL__c.field-meta.xml
<CustomField>
    <fullName>ChatStartURL__c</fullName>
    <label>ChatStartURL</label>
    <type>Url</type>
</CustomField>