force-app/main/default/objects/LiveChatTranscript/fields/IndLicenseApplication__c.field-meta.xml
<CustomField>
    <fullName>IndLicenseApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Chat Transcripts</relationshipLabel>
    <relationshipName>Chat_Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>