force-app/main/default/objects/LiveChatTranscript/listViews/Chats_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Chats_LiveChatTranscript</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>Chat</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>